--- a/assets/styles/my.less
+++ b/assets/styles/my.less
@@ -108,3 +108,31 @@ ul.position {
 ul.position li{
   list-style-type:none;
 }
+
+
+
+form .ng-invalid-required.ng-dirty {
+  background-color: lightpink;
+}
+
+form .ng-invalid-email.ng-dirty {
+  background-color: lightgoldenrodyellow;
+}
+
+form .ng-valid.ng-dirty {
+  background-color: lightgreen;
+}
+
+span.summary.ng-invalid {
+  color: red;
+  font-weight: bold;
+}
+
+span.summary.ng-valid {
+  color: green;
+}
+
+div.error {
+  color: red;
+  font-weight: bold;
+}
