--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,64 +1,29 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>PRICE</title>
-    <!-- Viewport mobile tag for sensible mobile support -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<div class=" col-md-8 col-md-offset-2">
+    <div class="page-header">
+        <h1>Добавить прайс
+            <small>Загрузите подготовленый прайс-лист.</small>
+        </h1>
+    </div>
+    <form action="/file/upload" enctype="multipart/form-data" method="post">
+        <div class="form-group">
+            <label for="inputPrice"></label>
+            <input type="file" name="avatar" multiple="multiple">
+            <p class="help-block">расширение файла .xlsx или .xls </p>
+        </div>
+        <button type="submit" class="btn btn-default">Добавить</button>
+    </form>
 
-    <!--STYLES-->
-    <link rel="stylesheet" href="/styles/angular-toastr.css">
-    <link rel="stylesheet" href="/styles/animate.css">
-    <link rel="stylesheet" href="/styles/bootstrap.css">
-    <link rel="stylesheet" href="/styles/ie10-viewport-bug-workaround.css">
-    <link rel="stylesheet" href="/styles/importer.css">
-    <link rel="stylesheet" href="/styles/navbar_sticky-footer-navbar.css">
-    <link rel="stylesheet" href="/styles/y-dashboard.css">
-    <!--STYLES END-->
-    <script type="text/javascript">
-        window.SAILS_LOCALS = {
-            me: <%- JSON.stringify(me||null) %>
-        };
-    </script>
+    <!--<p>****************************</p>-->
 
-</head>
-<body ng-app="PRICE"  ng-cloak>
-<!--<section class="the-list-of-videos col-md-12">-->
-<!--<div class="loading" ng-if="videosLoading">Loading videos...</div>-->
-<!--<ul>-->
-<!--<li class="video" ng-repeat="video in videos" ng-if="!videosLoading">-->
-<!--<h2>{{video.title}}</h2>-->
-<!--<iframe width="640" height="390" ng-src="{{video.src}}" frameborder="0" allowfullscreen>-->
-<!--</iframe>-->
-<!--</li>-->
-<!--</ul>-->
-<!--</section>-->
-<div class="container-fluid">
-<%- partial('./partials/navigation.ejs') %>
-<%- body %>
-<!--TEMPLATES-->
-<script type="text/javascript" src="/jst.js"></script>
-<!--TEMPLATES END-->
-<!--SCRIPTS-->
-<script src="/js/dependencies/sails.io.js"></script>
-<script src="/js/dependencies/jquery.min.js"></script>
-<script src="/js/dependencies/bootstrap.min.js"></script>
-<script src="/js/dependencies/angular.js"></script>
-<script src="/js/dependencies/angular-translate.js"></script>
-<script src="/js/dependencies/angular-translate-loader-url.js"></script>
-<script src="/js/dependencies/angular-resource.js"></script>
-<script src="/js/dependencies/moment.js"></script>
-<script src="/js/dependencies/moment-precise-range.js"></script>
-<script src="/js/dependencies/twix.js"></script>
-<script src="/js/dependencies/moment-recur.js"></script>
-<script src="/js/dependencies/ru.js"></script>
-<script src="/js/dependencies/angular-toastr.js"></script>
-<script src="/js/dependencies/angular-ui-router.min.js"></script>
-<script src="/js/dependencies/lodash.js"></script>
-<script src="/js/dependencies/ng-fx.min.js"></script>
-<script src="/js/app.js"></script>
-<script src="/js/controllers/homePageController.js"></script>
-<script src="/js/controllers/priceController.js"></script>
-<!--SCRIPTS END-->
+
+    <!--<form ng-submit="submitNewPrice()" name="price" enctype="multipart/form-data" >-->
+    <!--<div class="form-group">-->
+    <!--<label for="inputPrice"></label>-->
+    <!--<input type="file" ng-model="price.avatar" multiple="multiple">-->
+    <!--<p class="help-block">расширение файла .xlsx или .xls </p>-->
+    <!--</div>-->
+    <!--<button type="submit" class="btn btn-default">Добавить</button>-->
+    <!--</form>-->
+
+
 </div>
-</body>
-</html>
