--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="/styles/navbar_sticky-footer-navbar.css">
   <link rel="stylesheet" href="/styles/y-dashboard.css">
   <!--STYLES END-->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js" ></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
   <script type="text/javascript">
     window.SAILS_LOCALS = {
       _csrf: '<%= _csrf %>',
@@ -22,7 +24,7 @@
   </script>
 
 </head>
-<body >
+<body>
 <!--<section class="the-list-of-videos col-md-12">-->
 <!--<div class="loading" ng-if="videosLoading">Loading videos...</div>-->
 <!--<ul>-->
