Edit matrix fix

--- a/assets/styles/my.less
+++ b/assets/styles/my.less
@@ -3,7 +3,11 @@
 @gray: lighten(#000, 33.5%); // #555
 @gray-light: lighten(#000, 79.7%); // #777
 @gray-lighter: lighten(#000, 93.5%); // #eee
-
+@brand-primary: #337ab7;; // #337ab7
+@brand-primary-border: #2e6da4; // #2e6da4
+@link-color:       @brand-primary;
+@link-hover-color: #286090;
+@link-hover-border-color: #204d74;
 .fired {
   //color: @gray-lighter;
   color: @gray-light;
@@ -136,3 +140,47 @@ div.error {
   color: red;
   font-weight: bold;
 }
+
+/* BuTTON FILE */
+
+.file-upload input[type="file"]{
+  display: none;/* скрываем input file */
+}
+/* задаем стили кнопки выбора файла*/
+.file-upload {
+  position: relative;
+  overflow: hidden;
+  padding: 5px 10px;
+  //max-width: 40px;
+  height: 40px;
+
+
+  color: #fff;
+  text-align: center;
+}
+.file-upload span:hover {
+  background: @link-hover-color;
+  border: 1px solid  @link-hover-border-color;
+}
+/* Растягиваем label на всю область блока .file-upload */
+.file-upload label {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  height: 100%;
+  cursor: pointer;
+  font-weight: lighter;
+}
+/* стиль текста на кнопке*/
+.file-upload span {
+  padding: 5px 12px;
+  border-radius: 4px;
+  display: block;
+  background: @brand-primary;
+  border: 1px solid  @brand-primary-border;
+
+}
+
+/* BuTTON FILE  END */
