--- a/assets/styles/my.less
+++ b/assets/styles/my.less
@@ -3,11 +3,15 @@
 @gray: lighten(#000, 33.5%); // #555
 @gray-light: lighten(#000, 79.7%); // #777
 @gray-lighter: lighten(#000, 93.5%); // #eee
-@brand-primary: #337ab7;; // #337ab7
-@brand-primary-border: #2e6da4; // #2e6da4
+@brand-primary: white; // #337ab7
+//@brand-primary: #337ab7; // #337ab7
+@brand-primary-border: #cccccc; // #2e6da4
+//@brand-primary-border: #2e6da4; // #2e6da4
 @link-color:       @brand-primary;
-@link-hover-color: #286090;
-@link-hover-border-color: #204d74;
+@link-hover-color: #e6e6e6;
+//@link-hover-color: #286090;
+@link-hover-border-color: #cccccc;
+//@link-hover-border-color: #204d74;
 .fired {
   //color: @gray-lighter;
   color: @gray-light;
@@ -153,9 +157,7 @@ div.error {
   padding: 5px 10px;
   //max-width: 40px;
   height: 40px;
-
-
-  color: #fff;
+  //color: #fff;
   text-align: center;
 }
 .file-upload span:hover {
